IMPALA-1157: Crash in HdfsParquetWriter when value size larger than data page size.

The HdfsParquetWriter was not making the check whether the size needed to encode a single
value is larger than the data page size. In this (rare) case, it was getting into an
infinite loop of allocating new pages, eventually crashing when it would run out of
memory.

Change-Id: I1375c047406ebd863fd8fb826ff1ecc0cb6335bc
Reviewed-on: http://gerrit.sjc.cloudera.com:8080/3870
Reviewed-by: Ippokratis Pandis <ipandis@cloudera.com>
Tested-by: jenkins